--- a/05/Untitled.ipynb
+++ b/05/Untitled.ipynb
@@ -9,7 +9,7 @@
     "import tensorflow as tf\n",
     "import numpy as np\n",
     "\n",
-    "(x_train,y_train),(x_test,y_test) = tf.keras.datasets.cifar10.load_data()"
+    "(x_train,y_train),(x_test,y_test) = tf.keras.datasets.cifar10.loa"
    ]
   }
  ],
